Fix horizontal scrolling issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -279,4 +279,9 @@ a.link:hover:after,a.active:after {
   #aquis-project {
     padding-top: 200px;
   }
+
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden !important;
+  }
 }
